# qa-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TESTING.md  cleanup.sh  conftest.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  run_all_tests.sh  run_api_tests.sh  run_ui_tests.sh  setup-env.sh  setup_backend_for_tests.sh  stop_backend.sh
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .env.test  Dockerfile  README.MD  alembic.ini  pyproject.toml  start.sh
backend/app/: database.py  init_db.py  main.py  run_migrations.py
backend/app/api/: auth.py  tasks.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  mixin.py  task.py  user.py
backend/app/repositories/: __init__.py  base.py  task.py  user.py
backend/app/routers/: __init__.py  auth.py  dependencies.py  task.py  user.py
backend/app/schemas/: __init__.py  auth.py  task.py  user.py
backend/app/services/: __init__.py  auth.py  task.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_migration.py  002_add_database_defaults_and_constraint.py  003_adding_updated_at_for_user.py  004_add_index_in_tasks_on_owner_id.py  v0_0_1_1_add_cascade_delete.py  v0_0_1_initial.py
backend/tests/: README.md  conftest.py  test_auth.py  test_data.py  test_security.py  test_tasks.py
backend/tests/api/: test_auth.py  test_main.py  test_tasks.py
backend/tests/unit/: test_models.py  test_schemas.py  test_security.py
backend/tests/unit/api/: test_auth.py  test_main.py  test_tasks.py
frontend/: .dockerignore  .env.example  .env.test  Dockerfile  README.md  pyproject.toml  start.sh
frontend/app/: main.py  routes.py
frontend/app/templates/: base.html  dashboard.html  login.html  register.html
frontend/tests/: README.md  conftest.py  test_routes.py
k8s/base/: backend-deployment.yml  backend-service.yml  database-deployment.yml  database-service.yml  frontend-deployment.yml  frontend-service.yml  kustomization.yml  secrets.yml.template
k8s/overlays/local/: configmap.yml  kustomization.yml  namespace.yml  replicas.yml  service-patches.yml
k8s/scripts/: 0-quick-start.sh  1-setup.sh  2-build.sh  3-apply.sh  4-expose.sh  5-redeploy.sh  6-status.sh  7-logs.sh  9-cleanup.sh
tests/: .env.test.example  README.md  config.py  conftest.py  load_test.py  pyproject.toml  run_all_tests.sh  run_api_tests.sh  run_integration_tests.sh  run_ui_tests.sh  test_playwright.py  test_sample.py
tests/api/: README.md  conftest.py  test_auth_api.py  test_tasks_api.py  test_users_api.py
tests/api/clients/: __init__.py  auth_client.py  base_client.py  tasks_client.py  users_client.py
tests/common/: utils.py
tests/common/constants/: __init__.py  endpoints.py  js.py  routes.py
tests/common/factories/: __init__.py  task.py  user.py
tests/common/utils/: __init__.py  utils.py
tests/load/: load_test.py
tests/ui/: README.md  __init__.py  conftest.py  test_auth_ui.py  test_playwright.py  test_tasks_ui.py  test_users_ui.py
tests/ui/components/: __init__.py  task_card.py  task_modal.py
tests/ui/pages/: __init__.py  base_page.py  dashboard_page.py  login_page.py  register_page.py
utils/: __init__.py
