[project]
name = "qa-lab"
version = "0.0.1"
description = "Learning project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pre-commit>=4.4.0",
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501", "B008", "B904"]  # B008: function calls in defaults (FastAPI pattern), B904: raise from

[tool.ruff.format]
docstring-code-format = true
