[project]
name = "frontend"
version = "1.0.0"
description = "Flask frontend for Task Management System"
requires-python = ">=3.14"
dependencies = [
    "Flask>=3.1.2",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "Werkzeug>=3.1.3",
    "granian>=2.6.0",
]

[dependency-groups]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
