[project]
name = "qa-lab-frontend"
version = "0.0.1"
description = "Flask frontend for Task Management System"
requires-python = ">=3.14"
dependencies = [
    "Flask>=3.1.2",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "Werkzeug>=3.1.4",
    "granian>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
test = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-dotenv>=0.5.2",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
]
# Load test environment from .env and .env.test file
env_files = [".env.test"]
