[project]
name = "qa-lab-tests"
version = "0.0.1"
description = "API and UI integration tests for Task Management system"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "allure-pytest>=2.15.0",
    "playwright>=1.56.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.1",
    "pytest-xdist>=3.8.0",
    "requests>=2.32.5",
]

[tool.pytest.ini_options]
testpaths = ["api", "ui"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "ui: marks tests as UI integration tests"
]
